frontend/src/app/feature/radiolearn-ui/radiolearn-ui.component.scss
$border-color: hsl(200, 70%, 80%);
$background-color: hsl(202, 73%, 96%);

html,
body {
  height: 100%;
  width: 100%;
  margin: 0;
}

.toolbar {
  padding: 8px 18px;
  box-shadow: 0 3px 5px -1px #0003, 0 6px 10px #00000024, 0 1px 18px #0000001f;
  height: 60px;
}

#outer {
  display: flex;
  flex-flow: column;
  height: 100%;
}

.main {
  height: 100%;
  width: 100%;
  background-color: $background-color;
  display: inline-grid;
  color: black;
  overflow: hidden;
}

.leftHalf{
  grid-area: buttons;
  padding-top: 5px;
  padding-right: 5px;
  width: 100%;
  float: right;
}
.btn{
  margin-left: 5px;
}

.spacer {
  flex: 1 1 auto;
}

.flex-container-default{
  position: fixed;
  top: 145px;
  display: grid;
  height: 100%;
  overflow: auto;
}

#inner_fixed{
  z-index: 0;
  margin-bottom: 1px;
}

.header-button {
  font-weight: 600;
  font-size: 14px;
  font-family: Roboto, "Helvetica Neue", sans-serif
}

.header-button:hover {
  background-color: rgba(0,0,0,0.3);
  color: white;
}

::ng-deep .mat-toolbar{
  padding-top: 5px !important;
  padding-bottom: 5px !important;
}

::ng-deep .mat-form-field{
  width: 100%;
  overflow: hidden;
}

// Everything below the header

.inner_remaining {
  flex-grow : 1;
  z-index: 100;
  overflow-y: auto;
  overflow-x: auto;
}

.catSelectionList{
  width: 9%;
  min-height: 100%;
  height: auto;
  float: left;
  overflow-y: auto;
  overflow-x: auto;
  border-right: 1px solid #3f51b5;
}
.shallowSelectionList{
  padding-top: 10px;
  width: 20%;
  min-height: 100%;
  height: auto;
  float: left;
  overflow-y: auto;
  overflow-x: auto;
  border-right: 1px solid #3f51b5;
}

.pathSelectionList {
  width: 20%;
  min-height: 100%;
  height: auto;
  float: left;
  overflow-y: auto;
  overflow-x: auto;
  border-right: 1px solid #3f51b5;
}

.mat-list-item {
  font-size: 110%;
}

.mat-background-warn {
  background-color: rgba(244,67,54, 0.55)
}

.options-expand{
  min-height: 100%;
  height: fit-content;
  overflow: auto;
  float: left;
  border-right: 1px solid #3f51b5;
  font-size: 120%;
}

// General Browser settings

/* width */
::-webkit-scrollbar {
  width: 2px;
  height: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey;
  border-radius: 5px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: grey;
  border-radius: 0;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #b30000;
}

.disable-select {
  user-select: none; /* supported by Chrome and Opera */
  -webkit-user-select: none; /* Safari */
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* Internet Explorer/Edge */
}
.mat-chip-green {
  background: #7ee251;
}

.mat-chip-yellow {
  background: #f1d546;
}

.mat-chip-red {
  background: #ea5656;
}

